--- a/public/forms/templates.html
+++ b/public/forms/templates.html
@@ -1,5 +1,6 @@
-<div data---="box__common.form__if:~PATH~;title:@(Templates);icon:far fa-pencil-paintbrush;autofocus:true;reload:?/reload;scrollbar:1;width:800" class="hidden" data-scope="~PATH~">
+<div data---="box__common.form__if:~PATH~;title:@(Templates);icon:far fa-pencil-paintbrush;autofocus:true;reload:?/reload;scrollbar:1;width:1200" class="hidden" data-scope="~PATH~">
 	<div class="padding">
+		<p>@(Welcome to Total.js UI Builder)</p>
 	</div>
 	<nav>
 		<button name="cancel" style="width:100%">@(Close)</button>
