Added new improvements.

--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -5,16 +5,23 @@
 			<div class="m">
 				<div data---="input__?.name__innerlabel:1;required:1;placeholder:@(App name)">@(Name)</div>
 			</div>
-			<div class="m">
+			<div>
 				<div class="grid-2">
-					<div data---="input__?.type__innerlabel:1;placeholder:@(Enter a value);type:lower">@(App type)</div>
+					<div class="m">
+						<div data---="input__?.type__innerlabel:1;placeholder:@(Enter a value);type:lower">@(App type)</div>
+					</div>
+					<div class="m">
+						<div data---="input__?.version__innerlabel:1;placeholder:@(App version)">@(Version)</div>
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="m">
-			<div data---="input__?.description__type:multiline;innerlabel:1;placeholder:@(App description)">@(Description)</div>
+			<div data---="input__?.description__type:multiline;monospace:1;height:150;innerlabel:1;placeholder:@(App description)">@(Description)</div>
+			<div class="help">@(Markdown format)</div>
 		</div>
+		<hr />
 
 		<div class="grid-4">
 			<div class="m">
@@ -26,27 +33,29 @@
 			<div class="m">
 				<div data---="input__?.color__type:color;placeholder:@(Choose a color)">@(Color)</div>
 			</div>
-			<div class="m">
-				<div data---="input__?.version__placeholder:@(App version)">@(Version)</div>
-			</div>
 		</div>
 
 		<div class="caption m">
 			<label><i class="far fa-link"></i>@(Editor settings)</label>
 		</div>
-		<div class="message message-alert" style="margin-bottom:15px"><i class="far fa-exclamation-triangle mr5"></i>@(Links are not declared in the <b>publishing</b> and <b>rendering</b> data. Data are sent via <b>POST</b> method and serialized via "url encode" in the form <code class="b">data=JSON</code>.)</div>
-		<div class="grid-3">
-			<div class="m">
-				<div data---="input__?.editor.save__icon:far fa-globe;placeholder:@(Enter URL address)">@(URL address for saving data)</div>
+		<div data-scope="editor">
+			<div class="message message-alert" style="margin-bottom:15px"><i class="far fa-exclamation-triangle mr5"></i>@(Links are not declared in the <b>publishing</b> and <b>rendering</b> data. Data are sent via <b>POST</b> method and serialized via "url encode" in the form <code class="b">data=JSON</code>.)</div>
+			<div class="grid-2">
+				<div class="m">
+					<div data---="input__?.source__innerlabel:1;icon:far fa-database;placeholder:@(Enter URL address)">@(URL address for obtaining a data source)</div>
+				</div>
+				<div class="m">
+					<div data---="input__?.save__innerlabel:1;icon:far fa-save;placeholder:@(Enter URL address)">@(URL address for saving data)</div>
+				</div>
+				<div class="m">
+					<div data---="input__?.publish__innerlabel:1;icon:far fa-globe;placeholder:@(Enter URL address)">@(URL address for publishing data)</div>
+				</div>
+				<div class="m">
+					<div data---="input__?.render__innerlabel:1;icon:fas fa-flask;placeholder:@(Enter URL address)">@(URL address for rendering data)</div>
+				</div>
 			</div>
-			<div class="m">
-				<div data---="input__?.editor.publish__icon:far fa-globe;placeholder:@(Enter URL address)">@(URL address for publishing data)</div>
-			</div>
-			<div class="m">
-				<div data---="input__?.editor.render__icon:far fa-globe;placeholder:@(Enter URL address)">@(URL address for rendering data)</div>
-			</div>
+			<div data---="input__?.download__type:checkbox" class="b">@(Download objects to the source in compiling)</div>
 		</div>
-		<div data---="input__?.editor.download__type:checkbox" class="b">@(Download objects to the source)</div>
 	</div>
 	<nav data---="validate__?">
 		<button name="submit" disabled><i class="fa fa-check-circle"></i>@(SUBMIT)</button>
