--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -46,6 +46,9 @@
 				<div class="m">
 					<div data---="input__?.codes__innerlabel:1;icon:fas fa-list-ul;placeholder:@(Enter URL address)">@(URL address for obtaining codes)</div>
 				</div>
+				<div class="m">
+					<div data---="input__?.upload__innerlabel:1;icon:fas fa-list-ul;placeholder:@(Enter URL address)">@(URL address for uploading files)</div>
+				</div>
 			</div>
 			<div class="message message-alert" style="margin-bottom:15px"><i class="far fa-exclamation-triangle mr5"></i>@(Links are not declared in the <b>publishing</b> and <b>rendering</b> data. Data are sent via <b>POST</b> method and serialized via "url encode" in the form <code class="b">data=JSON</code>.)</div>
 			<div>
@@ -74,6 +77,10 @@
 
 		exports.submit = function(hide) {
 			COPY(exports.form, app.schema);
+
+			for (var instance of app.instances)
+				instance.args.upload = app.schema.editor.upload;
+
 			UPD('app');
 			hide();
 		};
