--- a/public/forms/objects.html
+++ b/public/forms/objects.html
@@ -1,4 +1,4 @@
-<div data---="box__common.form__if:~PATH~;title:@(Objects);icon:far fa-puzzle-piece;autofocus:true;reload:?/reload;scrollbar:1;width:800" class="hidden" data-scope="~PATH~">
+<div data---="box__common.form__if:~PATH~;title:@(Download objects);icon:ti ti-puzzle;autofocus:true;reload:?/reload;scrollbar:1;width:800" class="hidden" data-scope="~PATH~">
 	<div class="padding">
 	</div>
 	<nav>
@@ -8,7 +8,7 @@
 
 <script>
 
-	PLUGIN('~PATH~', function(exports) {
+	PLUGIN(function(exports) {
 
 		exports.reload = function() {
 			exports.refresh();
