--- a/public/forms/templates.html
+++ b/public/forms/templates.html
@@ -1,4 +1,4 @@
-<div data---="box__common.form__if:~PATH~;title:@(Templates);icon:far fa-pencil-paintbrush;autofocus:true;reload:?/reload;scrollbar:1;width:1200" class="hidden" data-scope="~PATH~">
+<div data---="box__common.form__if:~PATH~;title:@(Templates);icon:ti ti-pencil-paintbrush;autofocus:true;reload:?/reload;scrollbar:1;width:1200" class="hidden" data-scope="~PATH~">
 	<div class="padding">
 		<p>@(Welcome to Total.js UI Builder)</p>
 	</div>
