Added new changes.

--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -8,7 +8,7 @@
 			<div>
 				<div class="grid-2">
 					<div class="m">
-						<ui-component name="input" path="?.type" config="innerlabel:1;placeholder:@(Enter a value);type:lower">@(App type)</ui-component>
+						<ui-component name="input" path="?.type" config="disabled:1;innerlabel:1;placeholder:@(Enter a value);type:lower">@(App type)</ui-component>
 					</div>
 					<div class="m">
 						<ui-component name="input" path="?.version" config="innerlabel:1;placeholder:@(App version)">@(Version)</ui-component>
